prevent annoying scroll overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
   body,
   #__next {
     height: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
     @apply bg-dark;
   }
 
